--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div class=box1></div>
+    <div class=box2></div>
+    <div class=box3></div>
+    <div class=box4></div>
+    
 
 
 
